[workspace]
members = ["tokio", "smol", "test-utils"]

[package]
name = "orb"
version = "0.5.0"
edition = "2024"
authors = ["plan <frostyplanet@gmail.com>"]
categories = ["concurrency", "network-programming"]
documentation = "https://docs.rs/orb"
repository = "https://github.com/NaturalIO/orb"
keywords = ["networking", "async", "io", "runtime"]
license = "MIT"
description = """
An abstraction for writing runtime agnostic async code.
Orb provides interfaces to adapt different async runtimes like smol and tokio.
"""

[dependencies]
pin-project-lite = "0.2"
futures-lite = "2.6"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
rand = "0.8"
async-executor = "1"
