[package]
name = "orb-smol"
version = "0.3.0"
edition = "2024"
authors = ["plan <frostyplanet@gmail.com>"]
categories = ["concurrency", "network-programming"]
repository = "https://github.com/NaturalIO/orb"
documentation = "https://docs.rs/orb_smol"
keywords = ["networking", "async", "io", "runtime"]
readme = "../README.md"
license = "MIT"
description = """
orb interface adaptor for smol-rs ecology.
Orb is an abstraction for writing runtime agnostic async code.
"""

[dependencies]
futures-lite = "2.6"
orb = { path = "../", version=">=0.1" }
async-io = "2.6"
async-executor = "1"
smol = {version="2", optional=true}
blocking = "1.6"

[dev-dependencies]
orb-test-utils = { path = "../test-utils" }
rstest = "0"

[package.metadata.docs.rs]
all-features = true
# enable features in the documentation
rustdoc-args = ["--cfg", "docsrs"]

[features]
global = ["dep:smol"]
unwind = [] # Use AssertUnwindSafe when spawn task
