[package]
name = "orb-test-utils"
edition = "2021"
authors = ["plan <frostyplanet@gmail.com>"]
categories = ["concurrency", "network-programming"]
repository = "https://github.com/NaturalIO/orb"
documentation = "https://docs.rs/orb-test-utils"
keywords = ["networking", "async", "io", "runtime", "testing"]
license = "MIT"
description = """
Testing utilities for the orb async runtime abstraction.
"""

[dependencies]
orb = { path = "../", version = ">=0.1" }
log = { version = "0.4", features = ["std", "kv_unstable"] }
captains-log = ">=0.15"
